# Rag-vndoc

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
artifacts/faiss_index/: bm25_index.pkl  chunks.json  index.faiss
data/processed/: chunks.json  documents.json
data/raw/: chinh_tri_moi_truong.txt  chua_ba_la_mat.txt  dien_tro_song_song.txt  do_co_gian_cau.txt  doc_0000.txt  doc_0001.txt  doc_0002.txt  doc_0003.txt  doc_0004.txt  doc_0005.txt  doc_0006.txt  doc_0007.txt  doc_0008.txt  doc_0009.txt  doc_0010.txt  doc_0011.txt  doc_0012.txt  doc_0013.txt  doc_0014.txt  doc_0015.txt  doc_0016.txt  doc_0017.txt  doc_0018.txt  doc_0019.txt  doc_0020.txt  doc_0021.txt  doc_0022.txt  doc_0023.txt  doc_0024.txt  doc_0025.txt  doc_0026.txt  doc_0027.txt  doc_0028.txt  doc_0029.txt  doc_0030.txt  doc_0031.txt  doc_0032.txt  doc_0033.txt  doc_0034.txt  doc_0035.txt  (+19 more)
scripts/: run_ask.py  run_ingest.py
src/rag_chatbot/: __init__.py  config.py  protocols.py
src/rag_chatbot/chunkers/: recursive_chunker.py
src/rag_chatbot/embedders/: __init__.py  sbert_embedder.py
src/rag_chatbot/loaders/: __init__.py  pdf_loader.py  txt_loader.py
src/rag_chatbot/models/: ollama_llm.py
src/rag_chatbot/pipeline/: __init__.py  ask.py  ingest.py
src/rag_chatbot/preprocess/: cleaner.py
src/rag_chatbot/prompts/: rag_prompt.txt
src/rag_chatbot/stores/: faiss_store.py  hybrid_store.py
