[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pymupdf>=1.27.2.3",
    "rank-bm25>=0.2.2",
    "requests>=2.34.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "underthesea>=9.4.0",
    "uvicorn>=0.47.0",
]
